<resources>
    <string name="app_name">My Accounts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_Date">Transaction Date</string>
    <string name="transaction_Narration">Transaction Name</string>
    <string name="transaction_Desc">Description</string>
    <string name="transaction_Type">Transaction Type</string>
    <string name="select_transaction">Select Transaction Type</string>
    <string name="spr_preson">Select Person</string>
    <string name="spr_customer">Select Customer</string>
    <string name="trans_Amt">Amount</string>
    <string name="lbl_cashflow">Cash Flow</string>
    <string name="lbl_select_cashflow">Select Cash Flow</string>
    <string name="setup_profile">Set your profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_mobile">Mobile No</string>
    <string name="profile_pin">Pin</string>
    <string name="profile_confirm_pin">Confirm Pin</string>
    <string name="profile_old_pin">Old Pin</string>
    <string name="profile_new_pin">New Pin</string>
    <string name="save_profile">Save</string>
    <string name="login">Login</string>
    <string name="lbl_go">Go</string>
    <string name="forgot_password">Forgot pin?</string>
    <string name="lbl_person">Person Name</string>
    <string name="lbl_transaction_typename">Transaction Type Name</string>
    <string name="lbl_customer">Customer Name</string>
    <string name="lbl_mobile">Mobile No</string>
    <string name="lbl_customer_place">Place</string>
    <string name="lbl_manage_person">Manage persons</string>
    <string name="lbl_manage_customer">Manage Customer</string>
    <string name="lbl_manage_cust_trans">Customer Transactions</string>
    <string name="btn_backup">BackUp</string>
    <string name="btn_restore">Restore</string>
    <string name="lbl_transactions">Transactions</string>
    <string name="lbl_statement">Statement</string>
    <string name="lbl_from">From</string>
    <string name="lbl_to">To</string>
    <string name="lbl_trans_key">Keyword</string>
    <string name="ask_pin">Enter Pin</string>
    <string name="lbl_off_backup">Offline Backup</string>
    <string name="lbl_off_restore">Offline Restore</string>
    <string name="lbl_cust_trans_history">Customer Transaction History</string>
    <string name="lbl_statement_summary">Summary/மொத்த பரிவர்த்தனை</string>
    <string name="backup_string">
        1. Only when you connect internet, backup/restore operation performed. \n
        2. We are using your google drive account to store your transaction data. \n
        3. We are using your google drive account so your transaction details are safe. \n
        4. Only you can access details via this app. \n
        5. Please do regular backup inorder to keep your transactions safety. \n
        6. In Password Manager your usernames and passwords are encrypted and saved in database so nobody can view it. \n
    </string>
    <string name="Title">My Accounts App</string>
    <string name="app">App Name \t: \tMy Accounts</string>
    <string name="version">Version\t   :   \t3.0</string>
    <string name="app_desc">This app used to maintain your day to day transactions</string>
    <string name="developer">Developed by Guna</string>
    <string name="developer_email">gunasekaran.arts@gmail.com</string>
    <string-array name="Transtype">
        <item>Salary Pending</item>
        <item>Salary Paid</item>
        <item>Received</item>
    </string-array>
    <string name="manage_transaction">Transaction Type</string>
    <string name="cash_flow">Cash Flow</string>
    <string-array name="cashflow">
        <item>Inward</item>
        <item>Outward</item>
    </string-array>
    <string name="lbl_statistics">Analysis</string>
    <string name="lbl_expense_summary">Custom Summary</string>
    <string name="lbl_general_summary">General Summary</string>
    <string name="lbl_transaction_summary">Transaction wise Summary</string>
    <string name="lbl_tot_credit">Total Credits/மொத்த வரவு :</string>
    <string name="lbl_tot_debit">Total Debits/மொத்த செலவு :</string>
    <string name="txt_acc_name">Account</string>
    <string name="txt_acc_user_name">User Name</string>
    <string name="txt_acc_password">Password</string>
    <string name="lbl_pwd_mgr">Password Manager</string>
</resources>
