<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_manage"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lbl_manage_cust_trans"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/darkgrey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/transdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addresstxt"
                    android:drawableRight="@mipmap/calender_time"
                    android:focusable="false"
                    android:hint="@string/transaction_Date"
                    android:inputType="date"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/default_text_size" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    >
                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/spr_customerlist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:ms_multiline="false"
                        app:ms_hint="@string/spr_customer"
                        app:ms_enableFloatingLabel="true"
                        app:ms_enableErrorLabel="true"
                        app:ms_floatingLabelText="@string/lbl_person"
                        app:ms_errorColor="@color/red"
                        >
                    </fr.ganfra.materialspinner.MaterialSpinner>

                </android.support.design.widget.TextInputLayout>
                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/sprTransaction_Type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="10dp"
                    android:entries="@array/Transtype"
                    app:ms_multiline="false"
                    app:ms_hint="@string/transaction_Type"
                    app:ms_enableFloatingLabel="true"
                    app:ms_enableErrorLabel="true"
                    app:ms_floatingLabelText="@string/select_transaction"
                    app:ms_errorColor="@color/red"
                    >
                </fr.ganfra.materialspinner.MaterialSpinner>
            </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_gravity="center"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="1dp"
                   >
                   <android.support.v7.widget.AppCompatEditText
                       android:id="@+id/txt_transDesc"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addresstxt"
                       android:hint="@string/transaction_Desc"
                       android:inputType="textPersonName"
                       android:singleLine="true"
                       android:textColor="@color/black"
                       android:textColorHint="@color/black"
                       android:textCursorDrawable="@null"
                       android:textSize="@dimen/default_text_size" />
               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_gravity="center"
                   android:layout_marginLeft="1dp"
                   android:layout_marginRight="1dp"
                   >
                   <android.support.v7.widget.AppCompatEditText
                       android:id="@+id/txt_transAmt"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/addresstxt"
                       android:hint="@string/trans_Amt"
                       android:inputType="numberDecimal"
                       android:singleLine="true"
                       android:textColor="@color/black"
                       android:textColorHint="@color/black"
                       android:textCursorDrawable="@null"
                       android:textSize="@dimen/default_text_size" />
               </android.support.design.widget.TextInputLayout>
           </LinearLayout>

            <Button
                android:id="@+id/btn_Save_Cust_Trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.9"
                android:background="@drawable/button_press"
                android:padding="5dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="Save" />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/customertransgrouplist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>