<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/manage_transaction"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/darkgrey" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/trans_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_trans_key"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/default_text_size" />
        </android.support.design.widget.TextInputLayout>
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spr_Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:ms_multiline="false"
            app:ms_hint="@string/cash_flow"
            app:ms_enableFloatingLabel="true"
            app:ms_enableErrorLabel="true"
            app:ms_floatingLabelText="@string/cash_flow"
            android:entries="@array/cashflow"
            app:ms_errorColor="@color/red"
            >
        </fr.ganfra.materialspinner.MaterialSpinner>
    </LinearLayout>

</LinearLayout>