<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_manage"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/transaction_Type"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/darkgrey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txt_tranactiontype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addresstxt"
                    android:hint="@string/lbl_transaction_typename"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/default_text_size" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spr_Type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    app:ms_multiline="false"
                    app:ms_hint="@string/lbl_cashflow"
                    app:ms_enableFloatingLabel="true"
                    app:ms_enableErrorLabel="true"
                    app:ms_floatingLabelText="@string/lbl_select_cashflow"
                    app:ms_errorColor="@color/red"
                    android:entries="@array/cashflow"
                    >
                </fr.ganfra.materialspinner.MaterialSpinner>

            </LinearLayout>
            <Button
                android:id="@+id/btn_trans_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.9"
                android:background="@drawable/button_press"
                android:padding="5dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="Save" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>