<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/add_transaction"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <CustomWidget.TextAwesome
                android:id="@+id/lnk_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textSize="35dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/fa_arrow_circle_o_left" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/darkgrey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/transdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/addresstxt"
                        android:drawableRight="@mipmap/calender_time"
                        android:focusable="false"
                        android:hint="@string/transaction_Date"
                        android:inputType="date"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/default_text_size" />
                </android.support.design.widget.TextInputLayout>
                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/sprTransaction_Type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:ms_multiline="false"
                    app:ms_hint="@string/transaction_Type"
                    app:ms_enableFloatingLabel="true"
                    app:ms_enableErrorLabel="true"
                    app:ms_floatingLabelText="@string/select_transaction"
                    app:ms_errorColor="@color/red"
                    >
                </fr.ganfra.materialspinner.MaterialSpinner>
                <LinearLayout
                    android:id="@+id/personlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp">
                        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/test"
                            app:hintText="@string/spr_preson"
                            android:id="@+id/spnr_Persons"
                            />


                    </android.support.design.widget.TextInputLayout>
                    <CustomWidget.TextAwesome
                        android:id="@+id/lnk_addperson"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="35dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/fa_user_plus"
                        />
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_transactionName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/addresstxt"
                        android:hint="@string/transaction_Narration"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/default_text_size" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_transactionDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/addresstxt"
                        android:hint="@string/transaction_Desc"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/default_text_size" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/transamount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/addresstxt"
                        android:hint="@string/trans_Amt"
                        android:inputType="numberDecimal"
                        android:singleLine="false"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/default_text_size" />
                </android.support.design.widget.TextInputLayout>



            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
