<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/darkgrey" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_statement_summary"
            android:textSize="17dp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/darkgrey" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:text="@string/lbl_tot_credit"
                />
            <TextView
                android:id="@+id/txt_tot_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="100.00 "
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="10"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginLeft="5dp"
            android:text="@string/lbl_tot_debit"
            />
        <TextView
            android:id="@+id/txt_tot_debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="100.00 "
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:text="Closing Balance/கையிருப்பு :"
                />
            <TextView
                android:id="@+id/txt_col_bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="0.00"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/darkgrey" />
</LinearLayout>